[tool.poetry]
name = "credi"
version = "0.1.0"
description = "A very simple Redis clone."
authors = ["daniarlert <arlertdaniel@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"


[tool.poetry.group.dev.dependencies]
black = {version = "^22.10.0", allow-prereleases = true}
pytest = "^7.1.3"
pre-commit = "^2.20.0"
mypy = "^0.982"
isort = "^5.10.1"

[tool.black]
skip-string-normalization = 1

[tool.isort]
profile = "black"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
